repair problem with existing scroll-y on mobile

--- a/scrabble.css
+++ b/scrabble.css
@@ -8,6 +8,8 @@
 body {
     /* display: flex; */
     font-weight: bold;
+    width: 100%;
+    /* overflow-x: hidden; */
     
 }
 
@@ -132,7 +134,7 @@ sub {
 .close {
     position: absolute;
     top: -20px;
-    right: -20px;
+    right: 0px;
     width: 20px;
     height: 20px;
     background-color: rgb(73, 16, 16);
@@ -143,27 +145,19 @@ sub {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    /* display: none; */
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 720px) {
 
-    * {
-        margin: 0;
-        padding: 0;
-
+    html, body {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
     }
-/* 
-    #view2 {
-
-    } */
-
     canvas {
         transform: scale(0.5) translate(-50%, -50%);
         display: block;
         margin: auto;
-        /*        transform: scale(0.5) translate(-47%, -20%);*/
-/*        left: 0;*/
     }
     .gameNavigation, .racks {
         /*        transform: translate(100%, -700%);*/
@@ -213,4 +207,3 @@ sub {
             }
 
     }
-
